bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: illegal start of simple pattern
var :x = false
    ^BDR:2: error: '=' expected but ';' found.
while (x==false) {if (litMessge)=="R" {droite(); avance()}
^BDR:2: error: ';' expected but string literal found.
while (x==false) {if (litMessge)=="R" {droite(); avance()}
                                  ^